--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -28,151 +28,49 @@ body {
   flex-direction: column;
 }
 
-.container {
-  padding-inline: 32px;
-  margin-inline: auto;
-  max-width: 1300px;
-
-  height: 1000px;
+.bg-loader {
+  background-color: #eee; /* */
+  position: fixed; /* */
+  top: 0; /* */
+  left: 0; /* */
+  right: 0; /* */
+  bottom: 0; /* */
+  z-index: 9999; /* */
+  display: flex; /* */
+  justify-content: center; /* */
+  align-items: center; /* */
 }
 
-header {
-  background-color: #ebf5ec;
+.bg-loader .loader {
+  width: 100px; /* */
+  height: 100px; /* */
+  border: 3px solid #fff; /* */
+  border-radius: 50%; /* */
+  border-top-color: #104f1f; /* */
+  border-right-color: #104f1f; /* */
+  border-bottom-color: #104f1f; /* */
+  animation: puterin 0.8s linear infinite; /* */
 }
 
-.main-header {
-  min-height: 90px;
-  padding-block: 20px;
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 30px;
-}
-
-.brand-name {
-  font-size: 1.125rem;
-  font-weight: bold;
-  text-decoration: none;
-  color: #333;
-}
-
-.navigation-drawer {
-  min-height: 100vh;
-  width: 200px;
-  padding: 20px 10px;
-  background-color: #fff;
-
-  position: fixed;
-  inset-block-start: 0;
-  inset-inline-start: 0;
-
-  box-shadow: 0 0 4px 2px #00000033;
-  transform: translateX(-100%);
-  transition: transform 350ms;
-
-  z-index: 9999;
-}
-
-.navigation-drawer.open {
-  transform: translateX(0);
-}
-
-.drawer-button {
-  padding: 8px;
-  border: 0;
-  border-radius: 4px;
-
-  display: inline-block;
-  background-color: transparent;
-
-  font-weight: bold;
-  font-size: 28px;
-  color: #141e16;
-
-  cursor: pointer;
-}
-
-.nav-list {
-  list-style: none;
-
-  display: flex;
-  flex-direction: column;
-  gap: 10px 20px;
-}
-
-.nav-list li a {
-  padding: 6px 10px;
-
-  display: block;
-
-  color: #333;
-  text-decoration: none;
-}
-
-.nav-list li a:hover {
-  text-decoration: underline;
-}
-
-/* MAIN */
-.main-content {
-  padding-block: 20px;
-}
-
-/* Footer Styles */
-.footer {
-  background-color: #8e541e;
-  color: #f9f1e3;
-  text-align: center;
-  padding: 20px 0;
-  margin-top: 40px;
-  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.footer p {
-  font-size: 1rem;
-  margin: 0;
-}
-
-.footer span {
-  font-weight: bold;
-  color: #fddfaf;
-}
-
-.footer a {
-  color: #fddfaf;
-  text-decoration: none;
-}
-
-.footer a:hover {
-  color: #fdd18b;
-  text-decoration: underline;
-}
-
-@media screen and (width > 1000px) {
-  .navigation-drawer {
-    min-height: auto;
-    width: auto;
-    padding: 0;
-    background-color: transparent;
-
-    flex-direction: row;
-    justify-content: space-between;
-
-    position: static;
-    box-shadow: none;
-    transform: translateX(0);
-  }
-
-  .nav-list {
-    flex-direction: row;
-  }
-
-  .nav-list li a {
-    display: inline-block;
-  }
-
-  .drawer-button {
-    display: none;
+@keyframes puterin {
+  100% {
+    transform: rotate(360deg); /* */
   }
 }
+
+/* Navbar Styles */
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .show > .nav-link {
+  color: #104f1f; /* */
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: #94baa3; /* */
+}
+
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link:focus {
+  color: #104f1f; /* */
+}
+
+
