Menambah halaman result dan register

--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -77,3 +77,13 @@
     min-height: calc(100vh - 65px);
   }
 }
+
+.login-box p a {
+  color: #104f1f; 
+  text-decoration: none; 
+  font-weight: 600; 
+}
+
+.login-box p a:hover {
+  text-decoration: underline;
+}
