--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -28,48 +28,47 @@ body {
 }
 
 .bg-loader {
-  background-color: #eee; /* */
-  position: fixed; /* */
-  top: 0; /* */
-  left: 0; /* */
-  right: 0; /* */
-  bottom: 0; /* */
-  z-index: 9999; /* */
-  display: flex; /* */
-  justify-content: center; /* */
-  align-items: center; /* */
+  background-color: #eee;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .bg-loader .loader {
-  width: 100px; /* */
-  height: 100px; /* */
-  border: 3px solid #fff; /* */
-  border-radius: 50%; /* */
-  border-top-color: #104f1f; /* */
-  border-right-color: #104f1f; /* */
-  border-bottom-color: #104f1f; /* */
-  animation: puterin 0.8s linear infinite; /* */
+  width: 100px;
+  height: 100px;
+  border: 3px solid #fff;
+  border-radius: 50%;
+  border-top-color: #104f1f;
+  border-right-color: #104f1f;
+  border-bottom-color: #104f1f;
+  animation: puterin 0.8s linear infinite;
 }
 
 @keyframes puterin {
   100% {
-    transform: rotate(360deg); /* */
+    transform: rotate(360deg);
   }
 }
 
-/* Navbar Styles */
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .show > .nav-link {
-  color: #104f1f; /* */
+  color: #104f1f;
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: #94baa3; /* */
+  color: #94baa3;
 }
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link:focus {
-  color: #104f1f; /* */
+  color: #104f1f;
 }
 
 img {
@@ -232,19 +231,64 @@ img {
 }
 
 .btn {
-    color: #94baa3;
-    background-color: #104f1f;
-    border-color: #104f1f;
+  color: #94baa3;
+  background-color: #104f1f;
+  border-color: #104f1f;
 }
 
 .btn:hover {
-    color: #759b84;
-    background-color: #0c3f18;
-    border-color: #0c3f18;
+  color: #759b84;
+  background-color: #0c3f18;
+  border-color: #0c3f18;
 }
 
 .btn:focus {
-    color: #759b84;
-    background-color: #0c3f18;
-    border-color: #0c3f18;
+  color: #759b84;
+  background-color: #0c3f18;
+  border-color: #0c3f18;
+}
+
+.val {
+  color: #0a3f17;
+  font-weight: 700;
+}
+
+.navbar-toggler {
+  border: none;
+}
+
+.navbar-toggler:focus {
+  box-shadow: none;
+}
+
+::view-transition-old(main-content),
+::view-transition-new(main-content) {
+  animation-duration: 0.3s;
+  animation-timing-function: ease-in-out;
+}
+
+::view-transition-old(main-content) {
+  animation-name: fade-out;
+}
+
+::view-transition-new(main-content) {
+  animation-name: fade-in;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
